2005-08-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-grob-interfaces.scm (dynamic-line-spanner-interface):
	add avoid-slur property. 

	* Documentation/user/basic-notation.itely (Measure repeats): add
	countPercentRepeats example.

	* Documentation/user/advanced-notation.itely (Other text markup
	issues): remove remark about normal-font.  We have \normal-text

	* input/regression/tie-chord.ly: add note about remaining bugs.

	* lily/tie.cc (print): try Tie_column::set_directions () if
	control-points not yet defined.

2005-08-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/system-start-delimiter.cc (staff_brace): don't remove brace
	extent. This fixes braces falling out of the EPS bbox.

	* mf/feta-beugel.mf (braces_per_font): make brace glyph align
	exactly to bbox.

2005-08-23  Graham Percival  <gpermus@gmail.com>

	* {various} : change #up->#UP and #down->#DOWN.

	* ly/titling-init.ly: Spacing fix when using printallheaders=##t.

	* Documentation/user/advanced-notation.itely: clarify
	what objects handles text on a multimeasure rest.

2005-08-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION (PATCH_LEVEL): release 2.7.7

2005-08-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* make/lilypond-vars.make: set -dgs-font-load for "make web" 

	* Documentation/topdocs/INSTALL.texi (Top): add GS bugfix requirement.

	* input/regression/*.ly: formatting clean-up. Default layout
	before music expression.

	* input/mutopia/R.Schumann/GNUmakefile (examples): switch off
	romanze28-2 example.

	* scm/ps-to-png.scm: remove dir-re function.
	(make-ps-images): generate page names, instead of globbing them.
	This brings down LilyPond memory usage for make web by a factor
	10. (backportme?) 

	* scripts/lilypond-book.py (Lilypond_snippet.png_is_outdated):
	don't use glob. With 3000 files, globbing
	Documentation/user/out-www/ can take too much time. (backportme?)
	
	* lily/lily-guile.cc (gulp_file_to_string): take size argument.
