@@ -25,6 +25,7 @@ Jay Hamilton
 Jamie Bullock
 D. Josiah Boothby
 Kieren MacMillan
+Kris Shaffer
 Nancho Alvarez
 Steve Doonan
 Sven Axelsson
