@@ -1,5 +1,11 @@
 2005-08-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/multi-measure-rest.cc (set_text_rods): new function.
+
+	* lily/vertical-align-engraver.cc (process_music): call
+	Align_interface::set_axis(). This forces #'elements to be ordered,
+	preventing random vertical reordering  of staves.
+
 	* scm/define-grob-interfaces.scm (dynamic-line-spanner-interface):
 	add avoid-slur property. 
 
